# aether-platformer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aether-config.lua  generate-project.bat  generate-project.sh  imgui.ini
assets/: configs.json  prota.ase  sampleanim.ase  sampleanim.json  tiles.ase  untitled - Copy.tmx  untitled.tmx
assets/cortex/: configs.json
assets/demux/: bicho.ase  boot.lua  demux-bullets.ase  enemies-8x8.ase  player-anims.ase  player-anims.json
assets/enerjim/: Shinji-the-sea-angel.aseprite  birdie.aseprite  boot.lua  configs.json  enerjim-anims-bak.ase  enerjim-anims.ase  enerjim-anims.json  enerjim-maps.tiled-session  enerjim-toppart-work-bak.aseprite  enerjim-toppart-work-bak.json  enerjim-toppart-work.aseprite  enerjim-wind.aseprite  enerjim.aseprite  enerjimpalette.ase  images.tsx  kappa.aseprite  level1.tmx  mountainback.aseprite  noodling.aseprite  tileset-old.aseprite  tileset.aseprite  tileset.tsx  tileset2-casasinoutline.aseprite  tileset2.aseprite
assets/jojo/: bicho.ase  bicho.json  boot.lua  configs.json  enemyball.ase  enemyball.json  jojo.ase  jojo.json  tiles.ase
gamesrc/cortex/: cortexapp.cpp  cortexapp.h  cortexconfig.h  cortexecs.cpp  cortexecs.h  cortexentityfactory.cpp  cortexentityfactory.h  cortexworld.cpp  cortexworld.h  main.cpp
gamesrc/demux/: DemuxApp.cpp  DemuxApp.h  DemuxConfig.cpp  DemuxConfig.h  DemuxEcs.cpp  DemuxEcs.h  DemuxFactory.cpp  DemuxFactory.h  DemuxWorld.cpp  DemuxWorld.h  main.cpp
gamesrc/enerjim/: EnerjimApp.cpp  EnerjimApp.h  EnerjimConfig.cpp  EnerjimConfig.h  EnerjimEcs.cpp  EnerjimEcs.h  EnerjimFactory.cpp  EnerjimFactory.h  EnerjimWorld.cpp  EnerjimWorld.h  main.cpp
gamesrc/jojo/: jojoapp.cpp  jojoapp.h  jojoconfig.h  jojoecs.cpp  jojoecs.h  jojoentityfactory.cpp  jojoentityfactory.cpp.autosave  jojoentityfactory.h  jojofactory.cpp  jojofactory.h  jojoworld.cpp  jojoworld.cpp.autosave  jojoworld.h  main.cpp
media/: 3dtiles-autogen-inners-generated.blend  3dtiles-autogen-inners-generated.blend1  3dtiles-autogen-inners.blend  3dtiles-autogen-inners.blend1  3dtiles-autogen.blend  3dtiles-autogen.blend1  3dtiles-autogen.mtl  3dtiles.blend  3dtiles.blend1  3dtiles.mtl  colorprim.fs  colorprim.vs  consolefont.font  dafont.font  default.fs  dknight.ase  dknight.json  font.fs  font.vs  position_normals.vs  sprite.fs  sprite.vs  terraindata.json  terrainobjs.mtl  tilemap.fs  uber.fs  uber.vs
script/: creategame.sh
script/template/: app.cpp  app.h  config.h  ecs.cpp  ecs.h  factory.cpp  factory.h  main.cpp  world.cpp  world.h
scripts/: genie.lua
src/: assets.h  config.h  main.cpp  platformerjam.cpp  platformerjam.h
src/core/: config.h  entity.h  entityfactory.cpp  entityfactory.h  factoryjsonparser.h  gameworld.cpp  gameworld.h  room.cpp  room.h  roomlayoutgameworld.cpp  (+3 more)
tools/: create-game.py
(+66 files in other folders)
